--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,3 +5,14 @@
   font-size: 18px;
   position: relative;
 }
+
+#loading {
+  position: fixed;
+  inset: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: aqua;
+}
