--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,7 +11,7 @@
   inset: 0;
   width: 100vw;
   height: 100vh;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   background-color: aqua;
