--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -1,8 +1,16 @@
 #renderHtmlDappMain.mobile {
   flex: 1;
+  pointer-events: none;
 }
 
 #renderHtmlDappMain .pages {
   height: 100%;
   background-color: bisque;
+  display: flex;
+  align-items: center;
+  overflow-y: auto;
+}
+#renderHtmlDappMain .pages .pages-item {
+  height: 100%;
+  min-width: 100%;
 }
