--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,16 @@
-#main {
+#root {
   width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
   background-color: #eee;
   font-size: 18px;
+  overflow: hidden;
   position: relative;
+}
+
+#main {
+  flex: 1;
 }
 
 #loading {
@@ -17,4 +22,9 @@
   align-items: center;
   justify-content: center;
   background-color: aqua;
+}
+
+.hidden-scroll-bar::-webkit-scrollbar {
+  width: 0 !important;
+  display: none;
 }
