--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -1,16 +1,16 @@
-#renderHtmlDappMain.mobile {
-  flex: 1;
-  pointer-events: none;
-}
-
-#renderHtmlDappMain .pages {
+#main {
+  position: relative;
   height: 100%;
-  background-color: bisque;
   display: flex;
   align-items: center;
   overflow-y: auto;
+  pointer-events: none;
 }
-#renderHtmlDappMain .pages .pages-item {
-  height: 100%;
+
+#main .main-page {
   min-width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
