--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,6 +11,12 @@
 
 #main {
   flex: 1;
+  width: 100%;
+  background-color: aqua;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #loading {
@@ -24,7 +30,80 @@
   background-color: aqua;
 }
 
+#status-bar {
+  width: 100%;
+  background-color: antiquewhite;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#pagination {
+  width: 100%;
+  background-color: aquamarine;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#dock {
+  width: 100%;
+  background-color: blue;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#dock .main-dock {
+  width: 100%;
+  background-color: white;
+  opacity: 0.8;
+  backdrop-filter: blur(30px);
+  border-radius: 46px;
+}
+
 .hidden-scroll-bar::-webkit-scrollbar {
   width: 0 !important;
   display: none;
+}
+
+/* Không thuộc về điểm breakpoint */
+.container {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Theo breakpoint */
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
 }
