--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -24,7 +24,7 @@
   inset: 0;
   width: 100vw;
   height: 100vh;
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: center;
   background-color: aqua;
